--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "bevy_fallable"
 version = "0.3.0"
-authors = ["barsoosayque <shtoshich@gmail.com>"]
 edition = "2018"
+authors = ["barsoosayque <shtoshich@gmail.com>"]
+description = "A simple plugin to add fallable systems to Bevy game engine"
+repository = "https://github.com/barsoosayque/bevy_fallable"
+license = "MIT"
+keywords = ["game", "engine", "bevy"]
+categories = ["game-engines"]
+readme = "README.md"
 
 [dependencies]
 bevy_fallable_derive = { path = "bevy_fallable_derive/", version = "0.3.0" }
@@ -11,7 +17,6 @@ bevy_ecs = "0.3.0"
 
 [dev-dependencies]
 anyhow = "1.0.34"
-bevy = "0.3.0"
 
 [workspace]
 members = ['bevy_fallable_derive']
